--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -5,6 +5,7 @@
         <h3>Create new list</h3>
         <%= simple_form_for @list do |f| %>
           <%= f.input :name, placeholder: 'Drama' %>
+          <%= f.input :photo, as: :file %>
           <%= f.submit class: 'btn btn-flat' %>
         <% end %>
         <%= link_to 'back list', lists_path, class: 'btn btn-flat'  %>
